--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: npm react-scripts build --if-present
-    - run: npm react-scripts test
+    - run: react-scripts build --if-present
+    - run: react-scripts test
