--- a/.github/workflows/rainforestAction.yml
+++ b/.github/workflows/rainforestAction.yml
@@ -14,6 +14,15 @@ inputs:
     description: 'Rainforest API key'
     required: true
 
+# jobs: 
+#   build: 
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: docker build
+#       run: |
+#         docker build
+
 runs:
   using: 'docker'
   image: 'docker://gcr.io/rf-public-images/rainforest-cli:latest'
